# ssh-mcp

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ssh_mcp/: __init__.py  __main__.py  config.py  connection.py  security.py  server.py
tests/: __init__.py  test_connection.py  test_security.py  test_server.py
