[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ssh-mcp"
version = "0.1.0"
description = "An MCP server that allows AI Agents to SSH into remote Linux systems with guardrails"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
ssh-mcp = "ssh_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
